--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@
 												<p style="color: black;">-Business Sports Management</p>
 												<p style="color: black;">-Full Ride Basketball Scholarship</p>											
 											</li>
+											<li>
+												<h6 class="sm-title">UC DAVIS CODING BOOTCAMPS</h6>
+												<span class="date">2017 - 2018</span>
+												<p style="color: black;">Full Stack Web Flex Program</p>
+												<p style="color: black;">-Web Development</p>											
+											</li>
 										</ul>
 									</div>
 								</div>	
